WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266176
[WPE] Fix another wayland clang warning
https://bugs.webkit.org/show_bug.cgi?id=266176
Summary
[WPE] Fix another wayland clang warning
Philippe Normand
Reported
2023-12-10 02:48:58 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-12-10 03:02:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21591
EWS
Comment 2
2023-12-10 08:35:07 PST
Committed
271835@main
(321e9cd51673): <
https://commits.webkit.org/271835@main
> Reviewed commits have been landed. Closing PR #21591 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug