[WPE] Fix another wayland clang warning https://bugs.webkit.org/show_bug.cgi?id=266176

Reviewed by Michael Catanzaro.

* Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:

Canonical link: https://commits.webkit.org/271835@main